fixed screen stretch issue for mobile and refined transition animations

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   --map-accent-col: #7f7f7f;
   --map-accent-col-dark: #343332;
   --dark-red: #811331;
+  --transition-function: cubic-bezier(0.79, 0.14, 0.15, 0.86);
 }
 
 body {
@@ -34,7 +35,7 @@ ul {
   height: (2em, 3em, 4em);
   align-items: center;
   text-decoration: none;
-  transition: 200ms ease-in-out;
+  transition: 200ms var(--transition-function);
   border-radius: 1rem;
   padding: 0.5rem 0rem;
   opacity: 0.9;
@@ -57,15 +58,18 @@ ul {
   background-color: var(--map-accent-col);
   width: 3.5em;
   height: 100vh;
-  z-index: 4;
+  z-index: 5;
   border-radius: 0em 1rem 0em 0em;
   opacity: 0.5;
-  transition: color 250ms ease-in-out;
+  transition: color 150ms var(--transition-function),
+    width 250ms var(--transition-function),
+    opacity 150ms var(--transition-function);
 }
 
 li.menu-option-container svg.menu-toggle {
   margin: 2em 0.125em;
 }
+
 span.menu-option-label {
   display: none;
 }
@@ -73,7 +77,6 @@ span.menu-option-label {
 .nav-sidebar-list:hover {
   width: 16em;
   opacity: 0.85;
-  transition: width 150ms ease-in-out;
 }
 
 .nav-sidebar-list:hover span.menu-option-label {
@@ -113,17 +116,19 @@ button:last-of-type {
 /* Home page css */
 
 ul.general-stats-tab {
-  position: absolute;
+  position: fixed;
   margin: 0;
   padding: 0em 1em;
   height: 100vh;
   width: 17em;
-  right: 0;
+  right: 0%;
   z-index: 4;
   color: var(--map-accent-col-dark);
   background-color: var(--map-accent-col);
   opacity: 0.85;
-  transition: 200ms ease-in-out;
+  transition: transform 250ms var(--transition-function),
+    opacity 200ms var(--transition-function);
+
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -141,4 +146,12 @@ ul.general-stats-tab > svg {
 ul.general-stats-tab > li,
 svg {
   margin: 1rem 0.25rem;
+  display: block;
+}
+
+ul.general-stats-tab.closed {
+  /* right: -120%; */
+  transform: translateX(100%);
+  opacity: 0;
+  /* transition: right 250ms ease-in-out; */
 }
